Version ????? (tzdata v?????) - ???????????
-------------------------------------------

* period_for_local and local_to_utc now allow resolution of ambiguous
  times (e.g. when switching from daylight savings to standard time). Thanks
  to Cliff Matthews for the suggestion.
* Added require 'date' to timezone.rb (date isn't loaded by default in all
  environments).

Version 0.0.4 (tzdata v2005m) - 18-Sep-2005
-------------------------------------------

* Removed debug output accidentally included in the previous release.
* Fixed a bug in the generation of friendly zone identifiers (was inserting
  apostrophes into UTC, GMT, etc).
* Fixed Country <=> operator (was comparing non-existent attribute)
* Fixed Timezone.period_for_local error when period not found.
* Added testcases for Timezone, TimezoneProxy, TimezonePeriod, Country and
  some selected timezones.

Version 0.0.3 (tzdata v2005m) - 17-Sep-2005
-------------------------------------------

* Reduced visibility of some methods added in Timezone#setup and Country#setup.
* Added name method to Timezone (returns the identifier).
* Added friendly_identifier method to Timezone. Returns a more friendly version
  of the identifier.
* Added to_s method to Timezone. Returns the friendly identifier.
* Added == and <=> operators to Timezone (compares identifiers).
* Timezone now includes Comparable.
* Added to_s method to Country.
* Added == and <=> operators to Country (compares ISO 3166 country codes).
* Country now includes Comparable.
* New TimezoneProxy class that behaves the same as a Timezone but doesn't
  actually load in its definition until it is actually required.
* Modified Timezone and Country methods that return Timezones to return
  TimezoneProxy instances instead. This makes these methods much quicker.
  
  In Ruby on Rails, you can now show a drop-down list of all timezones using the
  Rails time_zone_select helper method:
  