@@ -1,3 +1,0 @@
-@echo off
-cd tzinfo
-rdoc --title TZInfo --inline-source README CHANGES lib
